deployment/staging/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fatboy-slim
  namespace: fatboy-staging
spec:
  ports:
  - port: 5000
  selector:
    app: fatboy-slim
