deployment/staging/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fatboy-slim
  namespace: fatboy-staging
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: default
  rules:
    - host: fatboy-slim.ivandevopstraining.com
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: fatboy-slim
                port:
                  number: 5000
